--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Calling card</title>
     <link rel="stylesheet" href="style.css">
     <script src="sctipt.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="imges/monke.png">
 </head>
 <body>
     <div class="box">
