--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
             <a href="https://discordapp.com/users/762395545779306527" target="_blank"><img src="imges/discord-icon-svgrepo-com.svg" alt="discord"></a>
             <a href="https://open.spotify.com/user/o3ky3fobziwu4chbmlicfj1e9?si=a0a97c68349d44b6" target="_blank"><img src="imges/spotify-logo.svg" alt="spotify"></a>
             <a href="https://github.com/mrhid3" target="_blank"><img src="imges/github-svgrepo-com.svg" alt="github"></a>
-            <a href="https://gitlab.com/mrhid3" target="_blank"><img src="imges/gitlab.svg" alt="gitlab"></a>
         </nav>
         <main>
             <header>
                 <h1>Hello there!</h1>
             </header>
             <article>
-                <p>I am an international terrorist, a member of the KGB and an
-                    autistic monkey. I pretend to know something about C++,
+                <p>I am an international terrorist, a member of the KGB and a 
+                    [redacted]. I pretend to know something about C++,
                     C#, Python, HTML/CSS and JavaScript. Pretty sure you can
                     figure out what the links aside do by yourself</p>
             </article>
